design: rename input label

--- a/templates/Front/Content/ContactForm/contactForm.html.twig
+++ b/templates/Front/Content/ContactForm/contactForm.html.twig
@@ -22,7 +22,7 @@
     <div class="wrap-article__row__full">
         <div class="form-line">
             <div class="form-line__input form-line__input--full">
-                <label class="input__label" for="{{ form.message.vars.id }}">
+                <label class="input-label" for="{{ form.message.vars.id }}">
                     {{ 'Message'|trans }}
                 </label>
                 {{ form_widget(form.message, { attr: { tabindex: 5 } }) }}
