--- a/templates/Front/Content/Customer/edit.html.twig
+++ b/templates/Front/Content/Customer/edit.html.twig
@@ -46,7 +46,7 @@
                     <div class="wrap-box__in" id="{{ form.customerUserData.password.vars.id }}">
                         <div class="form-line">
                             <div class="form-line__input">
-                                <label class="input__label">{{ 'Heslo'|trans }}</label>
+                                <label class="input-label">{{ 'Heslo'|trans }}</label>
                                 {{ form_widget(form.customerUserData.password.first, { label: 'Password'|trans}) }}
                                 <i class="svg svg-info in-icon in-icon--info form-line__info js-tooltip"
                                     data-toggle="tooltip"
