--- a/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
+++ b/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
@@ -8,7 +8,7 @@
     <div class="box-pickup-place">
         <div class="box-pickup-place__search">
             <div class="box-pickup-place__search__text">
-                <label class="input__label">
+                <label class="input-label">
                     {{ 'Zadejte město nebo PSČ:'|trans }}
                 </label>
             </div>
