--- a/templates/Styleguide/styleguide.html.twig
+++ b/templates/Styleguide/styleguide.html.twig
@@ -354,7 +354,7 @@
                             <fieldset>
                                 <div class="form-line">
                                     <div class="form-line__input">
-                                        <label for="registration_form_firstName" class="input__label required">
+                                        <label for="registration_form_firstName" class="input-label required">
                                             First name:
                                         </label>
                                         <input type="text" id="registration_form_firstName"
@@ -383,7 +383,7 @@
                                 <div id="js-company-fields" style="display: none;">
                                     <div class="form-line">
                                         <div class="form-line__input">
-                                            <label for="order_personal_info_form_companyName" class="input__label required">
+                                            <label for="order_personal_info_form_companyName" class="input-label required">
                                                 Company name: 
                                             </label>
                                             <input type="text" id="order_personal_info_form_companyName"
@@ -399,7 +399,7 @@
 
                                     <div class="form-line">
                                         <div class="form-line__input">
-                                            <label for="order_personal_info_form_companyNumber" class="input__label required">
+                                            <label for="order_personal_info_form_companyNumber" class="input-label required">
                                                 Company number:
                                             </label>
                                             <input type="text" id="order_personal_info_form_companyNumber"
@@ -415,7 +415,7 @@
 
                                     <div class="form-line">
                                         <div class="form-line__input">
-                                            <label for="order_personal_info_form_companyTaxNumber" class="input__label">
+                                            <label for="order_personal_info_form_companyTaxNumber" class="input-label">
                                                 Tax number:
                                             </label>
                                             <input type="text" id="order_personal_info_form_companyTaxNumber"
@@ -431,7 +431,7 @@
 
                                 <div class="form-line">
                                     <div class="form-line__input">
-                                        <label for="registration_form_password_first" class="input__label required">
+                                        <label for="registration_form_password_first" class="input-label required">
                                             Password:
                                         </label>
                                         <input type="password" id="registration_form_password_first"
@@ -473,7 +473,7 @@
                         <fieldset>
                             <div class="form-line">
                                 <div class="form-line__input">
-                                    <label for="order_personal_info_form_firstName" class="input__label required">
+                                    <label for="order_personal_info_form_firstName" class="input-label required">
                                         First name:
                                     </label>
                                     <input id="order_personal_info_form_firstName"
