--- a/templates/Front/Form/theme.html.twig
+++ b/templates/Front/Form/theme.html.twig
@@ -52,7 +52,7 @@
     <div class="{{ rowClass|default('form-line') }}">
         <div class="form-choice">
             {{ form_widget(form, { attr: { class: "css-checkbox" } }) }}
-            {{ form_label(form, label, { label_attr: { class: "input__label--full-width css-checkbox__image" }}) }}
+            {{ form_label(form, label, { label_attr: { class: "input-label--full-width css-checkbox__image" }}) }}
             {% set errors_attr = errors_attr|default({})|merge({'class': (errors_attr.class|default('form-error--choice'))}) %}
             {{ form_errors(form, { errors_attr: errors_attr } ) }}
             {{ block('icon') }}
@@ -88,7 +88,7 @@
                 {% set required_class = "" %}
             {% endif %}
 
-            {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' input__label ' ~ required_class )|trim}) %}
+            {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' input-label ' ~ required_class )|trim}) %}
 
             {% if label is empty %}
                 {% set label = name|humanize %}
