--- a/templates/Styleguide/styleguide.html.twig
+++ b/templates/Styleguide/styleguide.html.twig
@@ -320,10 +320,7 @@
 
                         <a href="#buttons" class="btn">Primary button</a> &nbsp;
                         <a href="#buttons" class="btn btn--success">Success button</a> &nbsp;
-                        <a href="#buttons" class="btn btn--success"><i class="svg svg-arrow"></i>Go to cart</a> &nbsp;
-                        <a href="#buttons" class="window-popup__actions__btn--continue window-button-continue btn btn--success">Go to cart <i class="svg svg-arrow"></i></a> &nbsp;
                         <a href="#buttons" class="btn btn--disabled">Disabled</a> &nbsp;
-                        <a href="#buttons" class="btn btn--outline">Outline</a> &nbsp;
                         <a href="#buttons" class="btn-no-style">No style</a> &nbsp;
                         <br><br>
                         <a href="#buttons" class="btn btn--small">Primary small</a> &nbsp;
@@ -332,17 +329,14 @@
 
                         <div class="styleguide-module__editor">
                             <textarea class="codemirror-html" id="html-buttons">
-<a href="#" class="btn">Primary button</a>
-<a href="#" class="btn btn--success">Success button</a>
-<a href="#" class="btn btn--success"><i class="svg svg-arrow"></i>Go to cart</a>
-<a href="#" class="window-popup__actions__btn--continue window-button-continue btn btn--success">Go to cart <i class="svg svg-arrow"></i></a>
-<a href="#" class="btn btn--disabled">Disabled</a>
-<a href="#" class="btn btn--outline">Outline</a>
-<a href="#" class="btn-no-style">No style</a>
+<a href="#buttons" class="btn">Primary button</a> &nbsp;
+<a href="#buttons" class="btn btn--success">Success button</a> &nbsp;
+<a href="#buttons" class="btn btn--disabled">Disabled</a> &nbsp;
+<a href="#buttons" class="btn-no-style">No style</a> &nbsp;
 
-<a href="#" class="btn btn--small">Primary small</a>
-<a href="#" class="btn">Primary</a>
-<a href="#" class="btn btn--large">Primary large</a>
+<a href="#buttons" class="btn btn--small">Primary small</a> &nbsp;
+<a href="#buttons" class="btn">Primary</a> &nbsp;
+<a href="#buttons" class="btn btn--large">Primary large</a> &nbsp;
                             </textarea>
                         </div>
                     </section>
@@ -731,36 +725,6 @@
                                 data-maximal-value="21590.000000"
                             ></div>
                         </div>
-
-                        <h3 class="styleguide-module__title--small">Newsletter form error</h3>
-                        <div class="footer__newsletter">
-                            <div class="footer__newsletter__form">
-                                <div class="footer__newsletter__form__wrap">
-                                    <div class="footer__newsletter__form__in">
-                                                <input type="email" id="subscription_form_email" name="subscription_form[email]" required="required" placeholder="Enter email" class="footer__newsletter__input input">
-
-                                                <span class="js-validation-errors-list js-validation-error-list-subscription_form_email form-error  display-none"><span class="form-error__icon"><i class="svg svg-warning"></i></span><ul class="form-error__list"></ul></span>
-                                    </div>
-                                        <button type="submit" id="subscription_form_send" name="subscription_form[send]" class="footer__newsletter__form__btn btn">Log in</button>
-
-                                </div>
-                                <span class="js-validation-errors-list js-validation-error-list-subscription_form in-message in-message--alert display-none">
-                                    <ul class="in-message__list"></ul>
-                                </span>
-
-
-                                <div class="form-choice">
-                                    <span class="form-choice__line">
-                                        <label>
-                                            <input type="checkbox" id="subscription_form_privacyPolicyAgreement" name="subscription_form[privacyPolicyAgreement]" required="required" value="1" class="css-checkbox">
-                                            <span class="css-checkbox__image">
-                                                I agree with <a href="#" target="_blank">privacy policy</a>.
-                                            </span>
-                                        </label>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
                     </section>
 
                     <section id="toggle" class="styleguide-module anchor clearfix">
@@ -967,9 +931,6 @@
                                                                 <span class="css-checkbox__image">
                                                                     Remember my login
                                                                 </span>
-                                                                <i class="svg svg-info in-icon in-icon--info js-tooltip"
-                                                                    data-toggle="tooltip" data-placement="right" title=""
-                                                                    data-original-title="We will remember your login on this computer for 30 days."></i>
                                                             </label>
                                                         </span>
                                                     </div>
