design: add style for registration box in order step 3

--- a/src/Resources/styles/front/common/components/box/order.less
+++ b/src/Resources/styles/front/common/components/box/order.less
@@ -91,4 +91,35 @@
             padding-left: @box-order-cart-gap;
         }
     }
+
+    &__registration {
+        padding-left: 72px;
+        max-width: 400px;
+        width: 100%;
+
+        font-size: @font-size-small;
+
+        &__message {
+            padding: 8px 10px;
+            margin-bottom: 11px;
+
+            border-radius: @radius;
+            background-color: lighten(@color-info, 35%);
+        }
+
+        &__block {
+            padding: 8px 10px;
+
+            border-radius: @radius;
+            background-color: @color-light;
+
+            &--without-border-top {
+                border-radius: 0 0 @radius @radius;
+            }
+
+            &--without-border-bottom {
+                border-radius: @radius @radius 0 0;
+            }
+        }
+    }
 }
