--- a/templates/Front/Content/Order/noticeRegistered.html.twig
+++ b/templates/Front/Content/Order/noticeRegistered.html.twig
@@ -1,5 +1,7 @@
-<div class="box-order__login--notice">
+<div class="box-order__registration__message">
     {{ 'Váš e-mail je na e-shopu registrován.'|trans }}
+</div>
+<div class="box-order__registration__block">
     <a
         href="{{ url('front_login') }}"
         class="underline-small js-login-in-order-window-opener"
