--- a/src/Resources/styles/front/common/components/form/input-required.less
+++ b/src/Resources/styles/front/common/components/form/input-required.less
@@ -9,6 +9,6 @@
     display: inline-block;
     padding: 0;
 
-    font-size: 16px;
+    font-size: @font-size-small;
     color: @color-brown-light;
 }
