--- a/src/Resources/styles/front/common/core/form/custom-inputs.less
+++ b/src/Resources/styles/front/common/core/form/custom-inputs.less
@@ -1,6 +1,6 @@
 @custom-inputs-margin-left: 30px;
 @custom-inputs-filter-margin-left: 25px;
-@custom-inputs-font-size: 16px;
+@custom-inputs-font-size: @font-size-small;
 @custom-inputs-icon-size: 20px;
 @custom-inputs-link-color: @color-base;
 @custom-inputs-link-color-hover: @color-orange;
