--- a/templates/Front/Content/Order/noticeUnregistered.html.twig
+++ b/templates/Front/Content/Order/noticeUnregistered.html.twig
@@ -1,9 +1,9 @@
 <div class="js-email-not-registered-notice">
-    <div class="box-order__registration--notice">
+    <div class="box-order__registration__message">
         {{ 'Váš e-mail není zaregistrován.'|trans }}
     </div>
 
-    <div class="box-order__info">
+    <div class="box-order__registration__block box-order__registration__block--without-border-bottom">
         {{ 'Vytvořte si zákaznický účet a příště už nebudete muset vyplňovat údaje.'|trans }}
     </div>
 </div>
