--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -35,31 +35,34 @@
                                     'data-url': url('front_login_notice')
                                 } }) }}
 
-                                <div class="clear js-order-personal-info-form-email"></div>
+                                <div class="box-order__registration">
+                                    <div class="js-order-personal-info-form-email"></div>
 
-                                <div class="js-order-registration-fields display-none">
-                                    {{ form_widget(form.registration, {
-                                        attr: { class: 'css-checkbox js-checkbox-toggle', 'data-checkbox-toggle-container-id': 'js-password-fields' }})
-                                    }}
-                                    <label for="{{ form.registration.vars.id }}" class="css-checkbox__image">
-                                        {{ 'Chci se zaregistrovat'|trans }}
-                                    </label>
+                                    <div class="box-order__registration__block box-order__registration__block--without-border-top js-order-registration-fields display-none">
+                                        {{ form_widget(form.registration, {
+                                            attr: { class: 'css-checkbox js-checkbox-toggle', 'data-checkbox-toggle-container-id': 'js-password-fields' }})
+                                        }}
 
-                                    <div id="js-password-fields">
-                                        {{ form_row(form.password.first, {
-                                            label: 'Password'|trans,
-                                            attr: { class: 'form-line__input--full'},
-                                            errors_attr: { class: 'form-error--under' },
-                                            icon: {
-                                                class: 'in-icon in-icon--info js-tooltip',
-                                                title: 'Password must be at least six characters and can\'t be the same as entered e-mail or its part before at sign.'|trans
-                                            }
-                                        }) }}
-                                        {{ form_row(form.password.second, {
-                                            label: 'Password again'|trans,
-                                            attr: { class: 'form-line__input--full'},
-                                            errors_attr: { class: 'form-error--under' }
-                                        }) }}
+                                        <label for="{{ form.registration.vars.id }}" class="css-checkbox__image">
+                                            {{ 'Chci se zaregistrovat'|trans }}
+                                        </label>
+
+                                        <div class="margin-top-10" id="js-password-fields">
+                                            {{ form_row(form.password.first, {
+                                                label: 'Password'|trans,
+                                                inputModificationClass: 'form-line__input--full',
+                                                errors_attr: { class: 'form-error--under' },
+                                                icon: {
+                                                    class: 'in-icon in-icon--info js-tooltip',
+                                                    title: 'Password must be at least six characters and can\'t be the same as entered e-mail or its part before at sign.'|trans
+                                                }
+                                            }) }}
+                                            {{ form_row(form.password.second, {
+                                                label: 'Password again'|trans,
+                                                inputModificationClass: 'form-line__input--full',
+                                                errors_attr: { class: 'form-error--under' }
+                                            }) }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
