design: add space in pagination items

--- a/src/Resources/styles/front/common/components/box/list.less
+++ b/src/Resources/styles/front/common/components/box/list.less
@@ -209,15 +209,15 @@
 
         &__pagination {
             @media @query-md {
-                margin: 6px 0 6px auto;
+                margin-left: auto;
             }
 
             @media @query-vl {
-                margin: 0;
+                margin-left: 0;
             }
 
             @media @query-xl {
-                margin: 6px 0 6px auto;
+                margin-left: auto;
             }
         }
     }
