--- a/src/Resources/styles/front/common/components/in/paging.less
+++ b/src/Resources/styles/front/common/components/in/paging.less
@@ -29,7 +29,7 @@
             min-width: @in-paging-size;
             height: @in-paging-size;
             line-height: @in-paging-size;
-            margin: 0 @in-paging-item-gap / 2;
+            margin: @in-paging-item-gap / 2;
             text-align: center;
 
             font-size: 16px;
