Changed validation conditions for password fields during order process.

--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -40,7 +40,7 @@
 
                                     <div class="box-order__registration__block box-order__registration__block--without-border-top js-order-registration-fields display-none">
                                         {{ form_widget(form.registration, {
-                                            attr: { class: 'css-checkbox js-checkbox-toggle', 'data-checkbox-toggle-container-id': 'js-password-fields' }})
+                                            attr: { class: 'css-checkbox js-checkbox-toggle js-order-registration-checkbox', 'data-checkbox-toggle-container-id': 'js-password-fields' }})
                                         }}
 
                                         <label for="{{ form.registration.vars.id }}" class="css-checkbox__image">
