design: add style for repeated payment page

--- a/src/Resources/styles/front/common/components/wrap/box.less
+++ b/src/Resources/styles/front/common/components/wrap/box.less
@@ -4,6 +4,14 @@
     border: 1px solid @color-border;
     border-radius: @radius;
 
+    &__block {
+        margin-bottom: 30px;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+
     &__title {
         padding: 10px 20px;
         margin-bottom: 0;
