design: add 100% width for error messages

--- a/src/Resources/styles/front/common/components/box/order.less
+++ b/src/Resources/styles/front/common/components/box/order.less
@@ -93,11 +93,14 @@
     }
 
     &__registration {
-        padding-left: 72px;
         max-width: 400px;
         width: 100%;
 
         font-size: @font-size-small;
+
+        @media @query-sm {
+            padding-left: @input-label-width;
+        }
 
         &__message {
             padding: 8px 10px;
