--- a/src/Resources/styles/front/common/components/form/line.less
+++ b/src/Resources/styles/front/common/components/form/line.less
@@ -62,6 +62,11 @@
             padding-left: @input-label-width;
             width: calc(~"@{calc-base} - @{form-line-width-input}");
         }
+
+        &--full {
+            width: 100%;
+            padding-left: @input-label-width;
+        }
     }
 
     &__info {
