--- a/src/Resources/styles/front/common/core/form/input.less
+++ b/src/Resources/styles/front/common/core/form/input.less
@@ -21,6 +21,7 @@
 .input {
     flex: 1;
     max-width: 100%;
+    width: 100%;
     height: @input-height;
     line-height: @input-height/2;
     padding: @input-padding-vertical @input-padding-horizontal;
