--- a/templates/Front/Form/theme.html.twig
+++ b/templates/Front/Form/theme.html.twig
@@ -41,7 +41,7 @@
             {{ form_widget(form) }}
             {{ block('icon') }}
         </div>
-        <div class="form-line__error">
+        <div class="form-line__error {{ errorModificationClass|default('') }}">
             {% set errors_attr = errors_attr|default({})|merge({'class': (errors_attr.class|default('form-error--line'))}) %}
             {{ form_errors(form, { errors_attr: errors_attr } ) }}
         </div>
@@ -68,8 +68,6 @@
         </div>
         <div class="form-line__error">
             {% set errors_attr = errors_attr|default({})|merge({'class': (errors_attr.class|default('form-error--line'))}) %}
-        </div>
-        <div class="form-line__error">
             {{ form_errors(form, { errors_attr: errors_attr } ) }}
         </div>
     </div>
