FE: order: user can choose one gift from corresponding order gift price level
- it is not possible to choose gift from lower or higher level than the current one
- gifts from next level and remaining price difference are displayed when the next level gifts exist

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -150,6 +150,23 @@
                                         {% endif %}
 
                                     {% endfor %}
+                                    {% if form.orderGiftProduct.vars.choices|length > 0 %}
+                                        {{ form_row(form.orderGiftProduct) }}
+                                    {% else %}
+                                        {% do form.orderGiftProduct.setRendered %}
+                                    {% endif %}
+                                    {% if nextLevelGifts is not empty and nextLevelDifference is not null %}
+                                        {{ 'Nakupte ještě za %nextLevelDifference% a vybírejte z těchto dárků:'|trans({'%nextLevelDifference%': nextLevelDifference|price}) }}
+                                        <ul>
+                                            {% for nextLevelGift in nextLevelGifts %}
+                                                <li>
+                                                    {{ image(nextLevelGift, { alt: nextLevelGift.name, size: 'thumbnail' }) }}
+                                                    {{ nextLevelGift.name }}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+
                                     {% if promoProducts|length > 0 %}
                                         <div class="table-cart__gifts--promo">
                                             <h3>{{ 'Promo produkty k objednávce'|trans }}</h3>
