--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -42,6 +42,11 @@
                         {{ _self.productPreviewItem(promoProductCartItem.product, promoProductCartItem.quantity, promoProductCartItem.totalPrice) }}
                     {% endfor %}
                 {% endif %}
+                {% set orderGiftProduct = orderPreview.orderGiftProduct %}
+                {% if orderGiftProduct is not null %}
+                    <li>{{ 'Dárek k vaší objednávce:'|trans }}</li>
+                    {{ _self.productPreviewItem(orderGiftProduct, 1, orderGiftProductPrice) }}
+                {% endif %}
                 {% if orderPreview.gifts is not empty %}
                     <li>{{ 'Dárky k vaší objednávce:'|trans }}</li>
                     {% for gift in orderPreview.gifts %}
