design: add style for product gift

--- a/src/Resources/styles/front/common/components/box/detail.less
+++ b/src/Resources/styles/front/common/components/box/detail.less
@@ -238,6 +238,11 @@
             &__text {
                 color: @color-brown-light;
             }
+
+            &__text-colored {
+                color: @color-add;
+                font-weight: 700;
+            }
         }
     }
 
