--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -7,6 +7,7 @@
 @list-products-item-title-rows: 2;
 @list-products-item-font-size: 15px;
 @list-products-item-line-height: 24px;
+@list-products-item-stores-height: 18px;
 @list-products-item-info-gap: 15px;
 @list-products-item-border-color: #d3d2d2;
 
@@ -172,6 +173,45 @@
                     font-size: 13px;
                     font-weight: 700;
                 }
+
+                &__stores {
+                    display: block;
+                    line-height: @list-products-item-stores-height;
+
+                    font-size: @font-size;
+
+                    @media @query-md {
+                        height: @list-products-item-stores-height;
+                    }
+                }
+            }
+
+            &__gift {
+                margin-top: 5px;
+                line-height: 17px;
+
+                font-size: 13px;
+
+                &__icon {
+                    display: inline-block;
+                    position: relative;
+                    width: @font-size;
+
+                    .svg {
+                        position: absolute;
+                        left: 0;
+                        top: -14px;
+
+                        color: @color-base;
+                        font-size: @font-size;
+                    }
+                }
+
+                &__text-colored {
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    color: @color-add;
+                }
             }
 
             &__price {
@@ -221,6 +261,7 @@
             .list-products__item--with-variants:hover & {
                 @media @query-lg {
                     height: 132px;
+                    margin-top: 0;
                 }
             }
 
