design: add style for product gift

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -188,7 +188,7 @@
                                         {{ gift.name }}
                                     </a>
                                     <div class="box-detail__gift__info__text">
-                                        {{ 'Vyberte si dárek <strong>zdarma</strong> v hodnotě'|trans|raw }}
+                                        {{ 'Vyberte si dárek'|trans }} <span class="box-detail__gift__info__text-colored">{{ 'zdarma'|trans }}</span> {{ 'v hodnotě'|trans }}
                                         <strong> {{ getProductSellingPrice(gift).priceWithVat|price }}</strong>
                                     </div>
                                 </div>
