--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -56,14 +56,17 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                            </a>
 
-                            {% if productView.getRandomGiftName() is not null %}
-                                {# TODO KOD: US-7335 #}
-                                <div class="list-products__item__info_gift">
-                                    <span class="todo-kod-text-transform--uppercase">{{ 'Dárek'|trans }}</span>: {{ productView.getRandomGiftName() }}
-                                </div>
-                            {% endif %}
+                                {% if productView.getRandomGiftName() is not null %}
+                                    <div class="list-products__item__info__gift">
+                                        <span class="list-products__item__info__gift__icon">
+                                            <i class="svg svg-gift"></i>
+                                        </span>
+                                        <span class="list-products__item__info__gift__text-colored">{{ 'Dárek'|trans }}:</span>
+                                        {{ productView.getRandomGiftName() }}
+                                    </div>
+                                {% endif %}
+                            </a>
 
                             <div class="list-products__item__hover">
                                 <div class="list-products__item__hover__wrap">
