--- a/templates/Front/Content/PersonalData/detail.html.twig
+++ b/templates/Front/Content/PersonalData/detail.html.twig
@@ -19,34 +19,34 @@
             <h1 class="in-title in-title--big in-title--center">{{ 'Personal information overview'|trans }} - {{ personalDataAccessRequest.email }}</h1>
         </div>
         <div class="padding-20">
-            {% if user is null and orders|length == 0 and newsletterSubscriber is null %}
+            {% if customerUser is null and orders|length == 0 and newsletterSubscriber is null %}
                 <h2>{{ 'No personal data for this e-mail address'|trans }}</h2>
             {% else %}
-                {% if user is not null %}
+                {% if customerUser is not null %}
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Personal data of registered customer'|trans }}</h2>
                     <div class="wrap-box__in">
                         <table class="table-params">
                             <tr>
                                 <th>{{ 'First name'|trans }}:</th>
-                                <td class="text-wrap">{{ user.firstName }} </td>
+                                <td class="text-wrap">{{ customerUser.firstName }} </td>
                             </tr>
                             <tr>
                                 <th>{{ 'Last name'|trans }}:</th>
-                                <td class="text-wrap">{{ user.lastName }} </td>
+                                <td class="text-wrap">{{ customerUser.lastName }} </td>
                             </tr>
-                            {% if user.telephone is not null %}
+                            {% if customerUser.telephone is not null %}
                                 <tr>
                                     <th>{{ 'Telephone'|trans }}:</th>
-                                    <td class="text-wrap">{{ user.telephone }} </td>
+                                    <td class="text-wrap">{{ customerUser.telephone }} </td>
                                 </tr>
                             {% endif %}
                             <tr>
                                 <th>{{ 'E-mail'|trans }}:</th>
-                                <td class="text-wrap">{{ user.email }} </td>
+                                <td class="text-wrap">{{ customerUser.email }} </td>
                             </tr>
-                            {% if user.customer.billingAddress is not null %}
-                                {% set addr = user.customer.billingAddress %}
+                            {% if customerUser.customer.billingAddress is not null %}
+                                {% set addr = customerUser.customer.billingAddress %}
                                 {% if addr.street is not null or addr.city is not null or addr.postCode is not null or addr.country.name is defined %}
                                     <tr>
                                         <th>{{ 'Billing address'|trans }}:</th>
@@ -56,31 +56,30 @@
                                     </tr>
                                 {% endif %}
                             {% endif %}
-                            {% if user.deliveryAddress is not null %}
-                                {% if user.deliveryAddress is not null %}
-                                    {% set delivery = user.deliveryAddress %}
-                                    {% if delivery.firstName is not null or delivery.lastName is not null or
-                                        delivery.companyName is not null or delivery.street is not null or
-                                        delivery.city is not null or delivery.postcode is not null or
-                                        delivery.country.name is defined %}
+                            {% if customerUser.customer.deliveryAddresses is not null %}
+                                {% for deliveryAddress in customerUser.customer.deliveryAddresses %}
+                                    {% if deliveryAddress.firstName is not null or deliveryAddress.lastName is not null or
+                                        deliveryAddress.companyName is not null or deliveryAddress.street is not null or
+                                        deliveryAddress.city is not null or deliveryAddress.postcode is not null or
+                                        deliveryAddress.telephone is not null or deliveryAddress.country.name is defined %}
                                         <tr>
                                             <th>{{ 'Delivery address'|trans }}:</th>
                                             <td class="text-wrap">
-                                                {{ [ delivery.firstName, delivery.lastName, delivery.companyName, delivery.street,
-                                                    delivery.city, delivery.postcode, delivery.country.name|default('') ]|joinNoneEmpty }}
+                                                {{ [ deliveryAddress.firstName, deliveryAddress.lastName, deliveryAddress.companyName, deliveryAddress.street,
+                                                    deliveryAddress.city, deliveryAddress.postcode, deliveryAddress.telephone, deliveryAddress.country.name|default('') ]|joinNoneEmpty }}
                                             </td>
                                         </tr>
                                     {% endif %}
-                                {% endif %}
+                                {% endfor %}
                             {% endif %}
 
-                            {% if user.customer.billingAddress.companyTaxNumber is not null or
-                                user.customer.billingAddress.companyNumber is not null or
-                                user.customer.billingAddress.companyName is not null %}
+                            {% if customerUser.customer.billingAddress.companyTaxNumber is not null or
+                                customerUser.customer.billingAddress.companyNumber is not null or
+                                customerUser.customer.billingAddress.companyName is not null %}
                                 <tr>
                                     <th>{{ 'Company'|trans }}:</th>
                                     <td class="text-wrap">
-                                        {% set address = user.customer.billingAddress %}
+                                        {% set address = customerUser.customer.billingAddress %}
                                         {{ [address.companyName, address.companyNumber, address.companyTaxNumber ]|joinNoneEmpty }}
                                     </td>
                                 </tr>
