--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="{% block meta_description %}{% endblock %}">
         <meta http-equiv="X-UA-Compatible" content="IE=11" />
-        <meta name="robots" content="noindex, follow">
+        <meta name="robots" content="noindex, nofollow">
 
         {{ render(controller('App\\Controller\\Front\\GtmController:headAction')) }}
 
