--- a/templates/Front/Content/Order/step2.html.twig
+++ b/templates/Front/Content/Order/step2.html.twig
@@ -15,13 +15,15 @@
                     {{ render(controller('App\\Controller\\Front\\FlashMessageController:indexAction')) }}
                 </div>
                 <div class="box-order__wrap">
-                    <div id="{{ form.vars.id }}" class="box-order__info js-order-box">
+                    <div id="{{ form.vars.id }}" class="box-order__info">
                         {% if isEnglishDomain() is same as (true) %}
                             <div class="margin-bottom-20">
                                 {{ form_row(form.country, { label: 'Country'|trans, attr: { 'data-order-transport-and-payment-box-url': url('front_order_transport_and_payment_box') } }) }}
                             </div>
                         {% endif %}
-                        {% include 'Front/Content/Order/transportAndPaymentBox.html.twig' %}
+                        <div class="js-order-box">
+                            {% include 'Front/Content/Order/transportAndPaymentBox.html.twig' %}
+                        </div>
                     </div>
 
                     <div id="js-order-preview" class="box-order__cart" data-url="{{ url('front_order_preview') }}">
